# cpp-conrol-nodemcu

./: .gitignore  CMakeLists.txt  README.md  platformio.ini
.config/: config.h.in  passwords.cmake
src/: callbacks.cpp  callbacks.h  config.h  eventHandler.cpp  eventHandler.h  main.cpp  pins.h  wifi.cpp  wifi.h
